<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/white_smoke"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center"
            >
            <EditText
                android:id="@+id/etxtCarPlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/et_auto_number"
                />
            <EditText
                android:id="@+id/etxtSeriesAndDocumentNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/series_document_number"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:text="@string/tv_info_document"
                />


            <Button
                android:id="@+id/btnCheckFines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_grey"
                android:layout_marginTop="20dp"
                android:text="@string/btn_check_fines"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:text="@string/tv_agreement"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_700"
                android:clickable="true"
                android:text="@string/tv_user_agreement"
                android:id="@+id/txtAgreement"
                android:focusable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:clickable="true"
                android:layout_marginTop="10dp"
                android:id="@+id/txtAgreementInfo"
                android:focusable="true" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>