<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_smoke"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tvTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textStyle="italic"
        android:text="@string/date_of_violation" />

    <TextView
        android:id="@+id/tvDateOfViolation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:text="TextView" />
    <TextView
        android:id="@+id/tvTextTypeViolation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textStyle="italic"
        android:text="@string/type_of_violation" />
    <TextView
        android:id="@+id/tvTypeViolation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:text="TextView" />

   <TextView
    android:id="@+id/tvTextDecreeNumber"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:padding="10dp"
    android:textStyle="italic"
    android:text="@string/decree_number" />

    <TextView
        android:id="@+id/tvDecreeNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:text="TextView" />
    <TextView
        android:id="@+id/tvTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textStyle="italic"
        android:text="@string/fine_amount" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvTextPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textStyle="italic"
        android:text="@string/payment_status" />

    <TextView
        android:id="@+id/tvPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:text="TextView" />



</LinearLayout>